Fix visibility of detail controls in Firefox. (#179)
Resolves #178

--- a/assets/stylesheets/_screen.scss
+++ b/assets/stylesheets/_screen.scss
@@ -867,6 +867,7 @@ article {
      font-family: inherit;
      position: relative;
      top: -.85rem;
+     -moz-appearance: none;
   }
 
   p + input.detail[type=checkbox] {
